k8s/endpoints/inventory.adjust/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-adjust
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-adjust
  template:
    metadata:
      labels:
        app: inventory-adjust
    spec:
      containers:
      - name: inventory-adjust
        image: ghcr.io/manny-ovena/inventory-adjust:latest
        ports:
        - name: http
          containerPort: 8080
