k8s/endpoints/inventory.adjust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-adjust
  namespace: app
spec:
  selector:
    app: inventory-adjust
  ports:
  - port: 80
    targetPort: http
