k8s/endpoints/inventory.adjust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-adjust
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: inventory.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-adjust
            port:
              number: 80
